Revert "merge conflict resolved: fix/videos-hero-card-fix -> dev-fix-3"
This reverts commit 6c4d0734331ca273a2a06460f89ab7b4c0b79a2d, reversing
changes made to 1a4dded969fe39f7930306f44bed7bb5a6a71f61.

--- a/src/web/stylesheets/common/pages/courses/style.scss
+++ b/src/web/stylesheets/common/pages/courses/style.scss
@@ -191,13 +191,12 @@
     padding: 1.5rem;
     border-radius: 12px;
     background-color: gt.theme-var(course-body-bg, null, $thememaplight, $cssvars);
-    display: flex;
-    align-items: center;
+    display: inline-block;
   }
 
   .circle-progress {
-    width: 7.5rem;
-    height: 7.5rem;
+    width: 6.5rem;
+    height: 6.5rem;
 
     svg {
       width: 100%;
@@ -218,10 +217,6 @@
           stroke: url(#gradient);
         }
       }
-    }
-
-    tspan {
-      font-size: 1rem;
     }
   }
 
