progress bar placeholder added

--- a/src/web/stylesheets/common/pages/courses/style.scss
+++ b/src/web/stylesheets/common/pages/courses/style.scss
@@ -216,6 +216,11 @@
           fill: none;
           stroke: url(#gradient);
         }
+
+        &.progress-bar-placeholder {
+          fill: none;
+          stroke: gt.theme-var(course-progress-placeholder-bg, null, $thememaplight, $cssvars);
+        }
       }
     }
   }
