--- a/src/web/stylesheets/common/sass/components/_gameLeaderboardComponent.scss
+++ b/src/web/stylesheets/common/sass/components/_gameLeaderboardComponent.scss
@@ -323,6 +323,11 @@
                           fill: none;
                           stroke: url(#gradient);
                         }
+
+                        &.progress-bar-placeholder {
+                          fill: none;
+                          stroke: gt.theme-var(body-bg-lightblue);
+                        }
                       }
 
                       #yourScoreCount tspan,
