game page progress bar multiple rendering stopped

--- a/src/web/stylesheets/common/pages/games/style.scss
+++ b/src/web/stylesheets/common/pages/games/style.scss
@@ -345,6 +345,7 @@ $level-progress-gradient-color2: gt.theme-var(game-level-progress-gradient-2, nu
 
   .skeleton-card {
     min-height: $hero-component-cards-min-height;
+    margin: 0.5rem 0;
   }
 }
 
