bug fixes from sheet

--- a/src/web/stylesheets/common/pages/landing/style.scss
+++ b/src/web/stylesheets/common/pages/landing/style.scss
@@ -624,6 +624,7 @@ $font-awesome-family: "Font Awesome 5 Free";
 
       .hackerkid-video-sec {
         position: relative;
+        z-index: 10;
 
         @include gm.media-breakpoint-down(sm) {
           width: 100%;
