--- a/src/web/stylesheets/common/sass/themes/_default.scss
+++ b/src/web/stylesheets/common/sass/themes/_default.scss
@@ -40,9 +40,8 @@ $thememaplight : (
   facebook-color: #4267b2,
   twitter-color: #1da1f2,
   telegram-color: #08c,
-  red-yellow-gradient-1: #FF423D,
-  red-yellow-gradient-2: #FFAE00
-
+  red-yellow-gradient-1: #ff423d,
+  red-yellow-gradient-2: #ffae00
 );
 // just copied the light theme colors to the dark for now
 // TODO: make this a real dark theme with appropriate colors
@@ -88,8 +87,8 @@ $thememapdark : (
   facebook-color: #4267b2,
   twitter-color: #1da1f2,
   telegram-color: #08c,
-  red-yellow-gradient-1: #FF423D,
-  red-yellow-gradient-2: #FFAE00
+  red-yellow-gradient-1: #ff423d,
+  red-yellow-gradient-2: #ffae00
 );
 
 $cssvars : (
