--- a/src/web/stylesheets/common/pages/clubs/style.scss
+++ b/src/web/stylesheets/common/pages/clubs/style.scss
@@ -554,6 +554,7 @@
         display: grid;
         grid-template-columns: 25% 75%;
         padding: 1rem;
+        height: 100%;
 
         &:hover {
           cursor: pointer;
