more page club hidden for free user, dashboard page club not shown for free user, levels component levels locked, videos page locked videos and fixed the search functionality along with some UI bugs

--- a/src/web/stylesheets/common/pages/courses/style.scss
+++ b/src/web/stylesheets/common/pages/courses/style.scss
@@ -885,6 +885,12 @@
   .pagination-footer {
     .pagination-nav {
       .pagination {
+        .page-item {
+          .page-link {
+            color: gt.theme-var(text-color-1);
+          }
+        }
+
         .page-item.active {
           .page-link {
             color: gt.theme-var(videos-progress-gradient-2, null, $thememaplight, $cssvars);
